--- a/.github/workflows/Views-update.yml
+++ b/.github/workflows/Views-update.yml
@@ -18,3 +18,9 @@ jobs:
           repo-token: ${{ secrets.PUBLIC_ACCESS_TOKEN  }}
           excluded-list: |
             onedrive-vercel-index
+            Heroku-VPS
+            reflare-template
+            serverless-dns
+            v2ray-heroku
+            View-Counter
+            VPSwindows-LK
