--- a/.github/workflows/Views-update.yml
+++ b/.github/workflows/Views-update.yml
@@ -24,3 +24,10 @@ jobs:
             v2ray-heroku
             View-Counter
             VPSwindows-LK
+      - name: Delete workflow runs
+        uses: Mattraks/delete-workflow-runs@v2
+        with:
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 0
+          keep_minimum_runs: 1
